<resources>
    <string name="app_name">选课</string>
    <string name="cb_rememberpassword">记住密码</string>
    <string name="cb_autologinx">自动登录</string>
    <string name="InfoPasswordInput">请输入密码</string>
    <string name="tv_password">密码</string>
    <string name="tv_name">用户名</string>
    <string name="InfoNameInput">请输入用户名</string>
    <string name="bt_login">登录</string>
    <string name="tv_tittle">用户登录</string>
    <string name="courseName">课程名称</string>
    <string name="courseCredit">学分</string>
    <string name="teachTime">上课时间</string>
    <string name="classroom">授课教室</string>
    <string name="department">院系</string>
    <string name="major">专业</string>
    <string name="courseType">类型</string>
    <string name="introduce">简介</string>
    <string name="availableNumber">剩余人数</string>
    <string name="requireType">选课限制</string>
    <string name="credit">学分</string>
    <string name="classTime">课时</string>
    <string name="teacher">教师</string>
    <string name="availableAmount">余量</string>
    <string name="selectCourse">确认选课</string>
    <string name="disSelectCourse">退选选课</string>
    <string name="title_course">课程</string>
    <string name="title_me">我的</string>
    <string name="title_selected_courses">已选课程</string>
    <string name="me_email">邮箱</string>
    <string name="me_status">用户状态</string>
    <string name="me_phone">手机号</string>
    <string name="me_sex">性别</string>
    <string name="me_description">备注</string>
    <string name="me_department">院系</string>
    <string name="me_major">专业</string>
    <string name="me_password">密码</string>
    <string name="me_name">名称</string>
    <string name="cancelSelectCourseSuccess">取消选课成功</string>
    <string name="cancelSelectCourseFail">取消选课失败</string>
    <string name="selectCourseSuccess">选课成功</string>
    <string name="selectCourseFail">选课失败</string>
    <string name="selectCoursesEmpty">您还没有选课</string>
    <string name="me_passport">账号</string>
    <string name="login_success">登录成功</string>
    <string name="changePassword">修改密码</string>
    <string name="logout">退出登录</string>
    <string name="nowLogout">正在退出登录</string>
    <string name="InfoOriPasswordInput">请输入原密码</string>
    <string name="InfoNewPasswordInput">请输入新密码</string>
    <string name="change_password_success">修改密码成功</string>
    <string name="change_password_fail">修改密码失败</string>
    <string name="searchClass">查询类别</string>
    <string name="userRole">用户角色</string>
    <string name="teacherCoursesEmpty">该老师没有发布课程</string>
    <string name="ensure_change_password">确认修改</string>
    <string name="course_detail">详情</string>
</resources>