<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tv_tittle"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/tv_tittle"
        android:textSize="36sp" />

    <LinearLayout
        android:id="@+id/user_name_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_tittle"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/InfoNameInput"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_password_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_name_ll"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_password"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/InfoPasswordInput"
            android:inputType="textPassword"
            android:textSize="20sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/user_chechbox_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_password_ll"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <CheckBox
            android:id="@+id/cb_login_rememberpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/cb_rememberpassword" />

        <CheckBox
            android:id="@+id/cb_login_autologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:checked="false"
            android:text="@string/cb_autologinx" />
    </RelativeLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_chechbox_rl"
        android:layout_margin="30dp"
        android:text="@string/bt_login"
        android:textSize="35sp" />

    <Switch
        android:id="@+id/switchForLocalDebug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true" />


</RelativeLayout>