<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:id="@+id/rr_ll_courses1"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_course_name"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="center"
            android:text="name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_credit_str"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/credit"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_credit"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="credit"
            android:layout_gravity="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_class_time_str"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/classTime"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/tv_class_time"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="class_time"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:id="@+id/rr_ll_courses2"
        android:layout_below="@id/rr_ll_courses1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_teacher_str"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/teacher"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/tv_teacher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="teacher"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_available_number_str"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/availableAmount" />
        <TextView
            android:id="@+id/tv_available_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:text="available_number" />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:theme="@style/Button.Green"
            android:id="@+id/watchDetail"
            android:text="@string/course_detail"/>
    </LinearLayout>

</RelativeLayout>